fixi contrast issues

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -4,7 +4,7 @@ main {
     gap: 1rem;
 }
 
-section { 
+section {
     padding: 1rem;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -22,42 +22,36 @@ h1, h2 {
     gap: 2rem;
 }
 
-#wireframe div{
- width: 100%;
+#wireframe div {
+    width: 100%;
 }
 
 
 .grid-cols-4 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 0.5rem; 
+    gap: 0.5rem;
 }
 
- 
-.grid-cols-4 > div {
-    border-radius: 0.375rem; 
-    color: white;  
-    font-size: 0.875rem;  
-    padding: 0.75rem; 
-    font-weight: 500;  
+.color-card {
+    border-radius: 0.375rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 500;
+    padding: 0.75rem;
     text-align: left;
 }
- 
-.grid-cols-4 > div h6 {
-    text-transform: uppercase; 
-    font-size: 0.75rem; 
-    font-weight: 400;
-    margin-bottom: 0.25rem;
-}
 
- 
-.grid-cols-4 > div p {
-    margin: 0;
+
+.color-card h6 {
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    font-weight: 400;
 }
 
 
 .dark {
-    background-color: #0C1229; 
+    background-color: #0C1229;
 }
 
 .cyan {
@@ -65,25 +59,33 @@ h1, h2 {
 }
 
 .dark-cyan {
-    background-color: #15616D; 
+    background-color: #15616D;
 }
 
 .yellow {
     background-color: #FFB703;
 }
 
-.color-card { 
-        border-radius: 0.375rem;  
-        color: white;  
-        font-size: 0.875rem;  
-        line-height: 1.25rem;  
-        font-weight: 500;  
-        padding: 0.75rem; 
+
+.text-dark {
+    color: #0C1229;
 }
+.text-yellow {
+    color: #FFB703;
+}
+.text-cyan {
+    color: #0BBBB6;
+}
+.text-dark-cyan {
+    color: #15616D;
+}
+
+
 
 .py-2 {
     padding-top: 2rem;
 }
+
 .list-unstyled {
     list-style-type: none;
     padding: 0;
